@@ -34,7 +34,7 @@ it is mostly useful for files where source = target.
  OmegaT 2.3.0 update 2
 ----------------------------------------------------------------------
    0 Enhancement
-   1 Bug fix
+   2 Bug fixes
    1 Localisation update
 ----------------------------------------------------------------------
 2.3.0 update 2 vs. 2.3.0 update 1
@@ -44,7 +44,9 @@ it is mostly useful for files where source = target.
   - Pipe-sign | missing from fields when copy-pasting
   http://sourceforge.net/support/tracker.php?aid=3395795
 
-  Localisation updates:
+  - Parse exception in the LaTeX filter
+
+  Localisation updates:  
   - Spanish localisation updated to 2.3 (UI, documentation, readme)
 
 ----------------------------------------------------------------------
